Update Mobile Client

--- a/Standalone/SamsiMetric.WWW/SamsiMetric/index.html
+++ b/Standalone/SamsiMetric.WWW/SamsiMetric/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <webscript name="main"></webscript>
+    <link rel="icon" href="/SmallFavicon.png" />
     <title>SamsiMetric</title>
   </head>
   <body>
